# P000231DS

./: .dockerignore  .gitignore  Issues.md  README.md  Readme.md  WebFunctionalityReadme.md  WebModuleReadme.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  run.py
backend/app/: __init__.py
backend/app/routes/: feedback.py  health.py  history.py  predict.py  root.py  train.py  upload.py
backend/app/services/: umec_storage.py  umec_training.py
configs/core/: data.yaml  model.yaml  project.yaml
configs/mappings/: failure_keywords.json  label_mappings.json  token_mappings.json
experiments/: abbrev_candidates.csv  analysis.py  balance_dataset.py  failure_keyword_enricher.ipynb
frontend/: package-lock.json  package.json  vite.config.js
frontend/public/: sample_discrepancies.csv
frontend/src/: App.jsx
frontend/src/components/: EditableGrid.jsx  FileUpload.jsx  Layout.jsx  PredictionTable.jsx  Sidebar.jsx  dashboard.css
frontend/src/context/: AppContext.jsx
frontend/src/pages/: Dashboard.jsx  Health.jsx  History.jsx  Home.jsx  Results.jsx
frontend/src/services/: api.js
ml/data/raw/: NLP_Dataset_2026.xlsx
ml/src/: features.py  ingestion.py  main.py  pipeline.py
ml/src/app/: main.py  pipeline.py
ml/src/bert/: __init__.py  data_prep.py  evaluate.py  inference.py  load_nlp_dataset.ipynb  model.py  optimize.py  tokenizer.py  train.py
ml/src/comparison/: compare  selector.py
ml/src/components/: confidence_router.py  feature_builder.py  label_mapper.py  level1_classifier.py  level2_classifier.py  text_cleaner.py  xai.py
ml/src/config/: label_mapping.json
ml/src/data/: loader.py  validator.py
ml/src/data_cleaning/: Cleaner.py  DataCleaner.py  __init__.py
ml/src/eda/: __init__.py  class_imbalance.py
ml/src/features/: engineer
ml/src/ingestion/: DataLoader.py  ingest.py
ml/src/model/: base.py  (+1 more)
pipeline/: explain.py  smoke.py
reports/: predictions.csv
scripts/: evaluate.py  explain.py  install-dev.ps1  install-dev.sh  predict.py  run_pipeline.py  train.py
src/umec/: __init__.py
(+60 files in other folders)
