[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aircraft-maintenance-nlp"
version = "0.1.0"
requires-python = ">=3.12.12"
dependencies = [
    "pandas",
    "openpyxl",
    "numpy",
    "regex",
    "scikit-learn",
    "tensorflow",
    "tensorflow-text",
    "tensorflow-hub",
    "safetensors",
    "tensorboard",
    "tensorboard-data-server",
    "tensorflow-datasets",
    "tensorflow-metadata",
    "tensorflow-model-optimization"

]

authors = [
    {name = "Tanishq R Bedi", email = "tanishq.bedi@gmail.com"}
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tools.setuptools.package-data]
aircraft_nlp = ["config/*.json"]