[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aircraft-maintenance-nlp"
version = "0.1.0"
requires-python = ">=3.12.12"
dependencies = [
    "pandas>=2.0",
    "openpyxl",
    "numpy>=1.24",
    "scipy>=1.10",
    "regex",
    "scikit-learn>=1.3",
    "gensim>=4.3",
    "pyyaml>=6.0",
    "pyarrow",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.66",
    "joblib>=1.3",
    "pytest>=7.4",
    "transformers",
    "torch",
    "accelerate"

]

authors = [
    {name = "Tanishq R Bedi", email = "tanishq.bedi@gmail.com"}
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tools.setuptools.package-data]
aircraft_nlp = ["config/*.json"]